# c-geohex3

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  test.c
author/: make-test-cases.pl  releng.pl
author/code2coords/: .gitignore  package.json
examples/: get-zone-by-code.c
include/: geohex.h  geohex3.h
lib/: geohex.c  geohex3.c  macro.h
lib/include/: pow.h
local/include/: geohex3.h
t/: official.c  official.t
